# openapi.yaml
@@ -4,7 +4,7 @@ info:
   description: Documentation Swagger pour une API exemple.
   version: 0.0.1
 servers:
-  - url: http://localhost:3000/api
+  - url: http://localhost:3000
 
 paths:
   /games:
@@ -197,31 +197,6 @@ paths:
                   $ref: '#/components/schemas/Data'
         '400':
           description: Bad Request
-        '500':
-          description: Internal Server Error
-  /data/{userId}:
-    get:
-      summary: Get user data
-      tags:
-        - Aggregate
-      parameters:
-        - in: path 
-          name: userId
-          schema:
-            type: integer
-          required: true
-          description: id of the user
-      responses:
-        '200':
-          description: Ok
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Data'
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
         '500':
           description: Internal Server Error
   /data/nationality/{nationality}:
